# instagram-bot

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py
